support page added

--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ slider */
   justify-content:space-around;
   flex-direction: row;
   align-items: center;
-  background: #23e3c9;
+  background: #23e3c99d;
   
 }
 
