--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,8 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 30px 10%;
-  background-color:#45B8AC;
+  background-color: rgb(104 107 29 / 70%);
+  height: 60px;
 }
 
 .logo:hover {
